Fix iOS copy option and general display on iOS devices

--- a/Assets/Styles/base.css
+++ b/Assets/Styles/base.css
@@ -20,3 +20,9 @@ h1 {
     position: absolute;
     top: 0;
 }
+
+canvas {
+    -webkit-user-select: none; /* prevents the 'copy' option > http://www.bernskiold.com/2011/02/02/tips-and-tricks-for-ios-web-development/ */
+       -moz-user-select: none;
+            user-select: none;
+}
